--- a/explorer/templates/explorer/home.html
+++ b/explorer/templates/explorer/home.html
@@ -18,29 +18,6 @@ $(document).ready(function(){
 {% endif %}
 {% endblock %}
 
-{% block menubar %}
-  <nav class="navbar navbar-toggleable-md navbar-inverse nav-head">
-    <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-    <a class="navbar-brand" href="/"><img src="{% static 'explorer/images/serol_logo_sm.png'%}" /></a>
-
-    <div class="collapse navbar-collapse" id="navbarNav">
-      <ul class="navbar-nav mr-auto">
-        <li class="nav-item"><a class="nav-link" href="/join/">{% trans "Become a Cosmic Explorer" %}</a></li>
-        <li class="nav-item"><a class="nav-link" href="/about/">{% trans "About Serol" %}</a></li>
-        <li class="nav-item"><a class="nav-link" href="/videos/">{% trans " Serol Videos" %}</a></li>
-        {% if request.user.is_authenticated %}
-        <li class="nav-item"><a class="nav-link" href="{% url 'stickers' %}">{% trans "Your Stickers" %}</a></li>
-        <li class="nav-item"><a class="nav-link" href="{% url 'auth_logout' %}" id="logout">{% trans "Logout" %}</a></li>
-        {% else %}
-        <li class="nav-item" id="login"><a class="nav-link" href="{% url 'auth_login' %}">{% trans "Login" %}</a></li>
-        {% endif %}
-      </ul>
-    </div>
-  </nav>
-  {% endblock%}
-
 {% block main-content %}
 
 <div class="content-wrapper">
@@ -52,14 +29,16 @@ $(document).ready(function(){
     <div class="col-4 ">
       <img src="{% static 'explorer/images/serol_logo_lg.png' %}" alt="serol logo" class="img-fluid" />
       <h1 class="title-main">{% trans "SEROL" %}</h1>
-      <p class="lead">{% trans "Join Serol and become a Cosmic Explorer" %}</p>
-      <p class="lead">
-        {% if request.user.is_authenticated %}
-        <a href="{% progress_url request.user %}" class="btn btn-lg btn-4 btn-4a animated tada" >{% trans "Continue your adventure!" %}</a>
-        {% else %}
-        <a href="#" class="btn btn-lg btn-4 btn-4a animated tada" data-toggle="modal" data-target="#exampleModal">{% trans "Start your adventure!" %}</a>
-        {% endif %}
-      </p>
+      <div class="info-blue">
+        <p class="statement">{% trans "Join Serol and become a Cosmic Explorer" %}</p>
+        <p class="statement">
+          {% if request.user.is_authenticated %}
+          <a href="{% progress_url request.user %}" class="btn btn-lg btn-4 btn-4a animated tada" >{% trans "Continue your adventure!" %}</a>
+          {% else %}
+          <a href="#" class="btn btn-lg btn-4 btn-4a animated tada" data-toggle="modal" data-target="#exampleModal">{% trans "Start your adventure!" %}</a>
+          {% endif %}
+        </p>
+      </div>
     </div>
     <div class="col-4 title-right">
     </div>
