--- a/explorer/templates/explorer/home.html
+++ b/explorer/templates/explorer/home.html
@@ -1,5 +1,5 @@
 {% extends "explorer/base.html" %}
-{% load static i18n  explorer_utils %}
+{% load static i18n explorer_utils %}
 
 {% block ribbon %}{% endblock %}
 
@@ -71,5 +71,6 @@ $(document).ready(function(){
       </div>
     </div>
   </div>
+</div>
 
 {% endblock %}
