--- a/explorer/templates/explorer/login.html
+++ b/explorer/templates/explorer/login.html
@@ -13,9 +13,8 @@
 {% endblock %}
 
 {% block main-body %}
-
 			<h1>Serol</h1>
-			<h3>{% trans "Log into your Las Cumbres Observatory account" %}</h3>
+			<h3>{% trans "Log in with your Las Cumbres Observatory account" %}</h3>
       {% for m in messages %}
       <p class="bg-warning">{{m|safe}}</p>
       {% endfor %}
