--- a/explorer/templates/explorer/challenge-start.html
+++ b/explorer/templates/explorer/challenge-start.html
@@ -5,7 +5,7 @@
 
 {% block main-body %}
 <div class="centre-container">
-  <h1>{% trans 'Challenge '%}{{object.number}}: {{object.name}}</h1>
+  <h1>{{object.name}}</h1>
     <p>{{object.description|safe|markdown}}</p>
     <p><a href="{% url 'observe' object.pk %}" class="btn btn-lg btn-4 btn-4a animated tada">{% trans 'Start the challenge' %}</a></p>
   </div>
