--- a/explorer/templates/explorer/mission.html
+++ b/explorer/templates/explorer/mission.html
@@ -10,7 +10,13 @@
     <div class="col-12  mission-content">
       <h1>{% trans "Mission" %} {{object.number}}</h1>
       <h1 class="mission-name">{{object.name|safe}}</h1>
-      <p><a class="btn btn-info btn-lg animated tada" href="{% mission_progress_url request.user object.pk %}" role="button">{% trans "Start the mission" %} &raquo;</a></p>
+      <p><a class="btn btn-info btn-lg animated tada" href="{% url 'challenge' current_challenge.pk %}" role="button">
+        {% if current_challenge.number == 1 %}
+        {% trans "Start the mission" %}
+        {% else %}
+        {% trans "Continue the mission" %}
+        {% endif %}
+         &raquo;</a></p>
     </div>
   </div>
 </div>
