--- a/explorer/templates/explorer/base.html
+++ b/explorer/templates/explorer/base.html
@@ -6,7 +6,7 @@
     <meta charset="utf-8">
     <meta name="description" content="">
     <meta name="author" content="">
-    <link rel="icon" href="../../favicon.ico">
+    <link rel="icon" href="{% static "explorer/images/favicon.gif" %}">
 
     <title>Serol's Cosmic Adventures | {% block title %}powered by Las Cumbres Observatory{% endblock %}</title>
 
