--- a/explorer/templates/explorer/challenge-observe.html
+++ b/explorer/templates/explorer/challenge-observe.html
@@ -156,7 +156,8 @@ $(document).ready(function(){
         <p></p>
       </div>
       <div class="modal-footer">
-        <a href="#" class="btn btn-4 btn-4a" id="submit_button" data-tid="">Take a picture! ></a>
+        <button type="button" class="btn btn-4 btn-4a" id="submit_button">Take a picture! ></button>
+        <button type="button" class="btn btn-4 btn-4a" id="accept_button" style="display:none;">Next ></button>
       </div>
     </div>
   </div>
