--- a/explorer/templates/explorer/challenge-identify.html
+++ b/explorer/templates/explorer/challenge-identify.html
@@ -7,18 +7,37 @@
 <script src="{% static 'explorer/js/utils.js' %}" ></script>
 <script>
 var images = Array();
+var current_tag = "{{object.avm_code}}";
 var redirect_url = "{% url 'analyse' object.id %}?frameid="
-var avm_codes = {'1.1','2.2','5.1.1','3.6.4.1','3.6.4.2','4','4.1.2','4.1.3','5.1.4','5.1.6','5.5.2'};
 var requestid = {{ progress.requestids}};
-images.push({'mine':false, 'url':"https://lco.global/files/rtisba/faulkes-rti/imagearchive/2013/08/07/process-1835-2.jpg"});
-images.push({'mine':false, 'url':"https://lco.global/files/rtisba/faulkes-rti/imagearchive/2013/04/26/process-2408-1.jpg"});
-images.push({'mine':false, 'url':"https://lco.global/files/rtisba/faulkes-rti/imagearchive/2013/04/04/process-753-2.jpg"});
 
-function filter_tags(current) {
-  
+function filter_tags() {
+  var static_url = "{% static 'explorer/identify/' %}";
+  var samples = {
+            "1.1" : static_url + "jupiter.jpg",
+            "2.2" : static_url + "c_2016.jpg",
+            "3.6.4" : static_url + "R135.jpg",
+            "3.6.4.2" : static_url + "M15.jpg",
+            "3.6.4.1" : static_url + "C44.jpg",
+            "4" : static_url + "M16.jpg",
+            "4.1.2" : static_url + "M20.jpg",
+            "4.1.3" : static_url + "M27.jpg",
+            "5.1.1" : static_url + "M51.jpg",
+            "5.1.4" : static_url + "M49.jpg",
+            "5.1.6" : static_url + "M82.jpg",
+            "5.5.2" : static_url + "NGC3187.jpg",
+    }
+  for (key in samples)
+  {
+     if (key != current_tag){
+       images.push({'mine':false, 'url':samples[key]});
+       console.log("key is "+key);
+     }
+  }
 }
 
 $(document).ready(function(){
+  filter_tags();
   $.when(
     $.get({url: 'https://archive-api.lco.global/frames/?limit=1&offset=1&ordering=-id&REQNUM='+requestid,
       headers: {'Authorization': 'Token '+localStorage.getItem('archive_token')},
@@ -27,7 +46,6 @@ $(document).ready(function(){
     .done(function(rdata){
         var frameid;
         if (rdata['results'].length > 0){
-          console.log(rdata);
           frameid = rdata['results'][0]['id'];
           redirect_url+=frameid
           get_colour_image(localStorage.getItem('archive_token'), frameid, mode='identify')
