--- a/explorer/templates/explorer/challenge-submitted.html
+++ b/explorer/templates/explorer/challenge-submitted.html
@@ -5,7 +5,7 @@
 
 {% block main-body %}
       <div class="row">
-        <div class="col-lg-10">
+        <div class="col-8">
         <div id="serol-figure">
           <div id="status-info">
             <span id="request-site"><i class="far fa-cog fa-w-16 fa-spin fa-3x fa-fw"></i></span>
@@ -76,7 +76,7 @@
           </div>
         </div>
 
-        <div class="col-lg-2">
+        <div class="col-4">
             <div class="bubble">
               <p>{% trans "I'm asking my telescope friends to take a picture of " %} <strong>{{progress.target}}</strong>
               {% trans "for you" %}</p>
