--- a/explorer/templates/explorer/challenge-base.html
+++ b/explorer/templates/explorer/challenge-base.html
@@ -6,28 +6,25 @@
 {% block challengename %}{{object.name}}{% endblock %}
 
 {% block menubar %}
-<nav class="navbar navbar-toggleable-lg navbar-inverse">
-  <a class="navbar-brand" href="/"><img src="{% static 'explorer/images/serol_logo_sm.png'%}" /></a>
-  <button type="button" class="nav-link dropdown-toggle btn btn-outline-secondary btn-sm" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+<div class="container-fluid">
+  <div class="navbar-brand">
+    <a  href="/"><img src="{% static 'explorer/images/serol_logo_sm.png'%}" /></a>
+    <span class="nav-heading">Challenge {{object.number}} : {{object.name}}</span>
+  </div>
+  <a class="dropdown-toggle" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
     <i class="far fa-bars"></i>
-</button>
+  </a>
   <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
     <a class="nav-link" href="/">{% trans "Home" %}</a>
     <a class="nav-link" href="/about/">{% trans "About Serol" %}</a>
     <a class="nav-link" href="/videos/">{% trans "Videos" %}</a>
     <a class="nav-link" href="{% url 'missions' %}">{% trans "Missions" %}</a>
-
-    {% if request.user.is_authenticated %}
     <a class="nav-link" href="{% url 'stickers' %}">{% trans "My Progress" %}</a>
     <a class="nav-link" href="{% url 'auth_logout' %}" id="logout">{% trans "Logout" %}</a>
-    {% else %}
-    <a class="nav-link" href="{% url 'auth_login' %}">{% trans "Login" %}</a>
-    {% endif %}
   </div>
 
-  <h3> Challenge {{object.number}} : {{object.name}}</h3>
   <div class="corner-ribbon sticky shadow mission-{{object.mission.number}}-colour"><h2>{% trans "Mission" %} {{object.mission.number}}</h2></div>
-</nav>
+</div>
 {% endblock %}
 
 
